backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: my-app  # Use the namespace if created
spec:
  replicas: 1  # Adjust based on your needs
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: mohamedelrefy20/backend  # Replace with your backend image or build it
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: my-app  # Use the namespace if created
spec:
  type: NodePort  # Change to NodePort
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    nodePort: 30001  # Optional: Specify a nodePort or let Kubernetes assign one
  selector:
    app: backend
